Addes some safety checks on IP addresses before connecting to peers. This should prevent bug 136392.

BUG: 136392


svn path=/trunk/extragear/network/ktorrent/; revision=599703